--- a/style.css
+++ b/style.css
@@ -111,9 +111,10 @@ header {
 nav,
 ul,
 li {
-    float: right;
-    padding: 0 20px;
-    font-family: 'Hind Madurai', sans-serif;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    font family: 'Hind Madurai', sans-serif;
     font-weight: 300;
     font-size: 22px;
 }
@@ -123,7 +124,13 @@ li {
     margin: 90px;
 }
 
+.rectangle {
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 26px;
 
+
+}
 
 
 
