--- a/style.css
+++ b/style.css
@@ -197,7 +197,8 @@ main {
 
 .grid-container-cols-12 {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(12 1fr);
+    width: 100%;
 }
 
 .photo1 {
@@ -224,7 +225,7 @@ main {
     grid-column: 8 / 11;
 }
 
-
+/* FOOTER -----------------------------------------------*/
 
 footer div {
     display: flex;
@@ -265,10 +266,49 @@ footer div {
     
   }
 
-
 .socials {
     display: flex;
     align-items: center;
+
+}
+
+/* FOOTER END -----------------------------------------------*/
+
+
+
+
+/* MEDIA QUERy FOR PHOTOGRAPHY -----------------------------------------------*/
+
+
+/* talbet */
+
+
+/* mobile */
+@media screen and (max-width: 600px) {
+    .grid-container-cols-12 {
+        display: grid;
+        grid-template-columns: 1fr;
+        
+    }
+
+    .photo1 {
+        grid-column: 1 / 2;
+    }
+    .photo2 {
+        grid-column: 1 / 2;
+    }
+    .photo3 {
+        grid-column: 1 / 2;
+    }
+    .photo4 {
+        grid-column: 1 / 2;
+    }
+    .photo5 {
+        grid-column: 1 / 2;
+    }
+    .photo6 {
+        grid-column: 1 / 2;
+    }
 
 }
 
@@ -284,6 +324,12 @@ footer div {
         flex-basis: 100%;
     }
 }
+
+
+/* MEDIA QUERIES END -----------------------------------------------*/
+
+
+/* A MESS -----------------------------------------------*/
 
 /* HOMEPAGE */
 
