--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ main {
 
 .grid-container-cols-12 {
     display: grid;
-    grid-template-columns: repeat(12 1fr);
+    grid-template-columns: repeat(12);
     width: 100%;
 }
 
@@ -277,14 +277,64 @@ footer div {
 
 
 
+/* MEDIA QUERIES -----------------------------------------------*/
+
+@media screen and (max-width: 640px) {
+    h1 {
+        font-size: 80px;
+    }
+
+
+/* MEDIA QUERy FOR MY SKILLS -----------------------------------------------*/
+@media screen and (max-width: 900px) {
+    .skill {
+        flex-basis: 50%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .skill {
+        flex-basis: 100%;
+    }
+}
+
+
+
 /* MEDIA QUERy FOR PHOTOGRAPHY -----------------------------------------------*/
 
 
 /* talbet */
+@media screen and (max-width: 768px) {
+    .grid-container-cols-12 {
+        display: grid;
+        grid-template-columns: repeat(6);
+        width: 100%
+       
+    }
 
+    .photo1 {
+        grid-column: 1 / 3;
+    }
+    .photo2 {
+        grid-column: 4 / 6;
+    }
+    .photo3 {
+        grid-column: 1 / 3;
+    }
+    .photo4 {
+        grid-column: 4 / 6;
+    }
+    .photo5 {
+        grid-column: 1 / 3;
+    }
+    .photo6 {
+        grid-column: 4 / 6;
+    }
+
+}
 
 /* mobile */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     .grid-container-cols-12 {
         display: grid;
         grid-template-columns: 1fr;
@@ -313,20 +363,14 @@ footer div {
 }
 
 
-@media screen and (max-width: 900px) {
-    .skill {
-        flex-basis: 50%;
-    }
-}
-
-@media screen and (max-width: 640px) {
-    .skill {
-        flex-basis: 100%;
-    }
-}
-
 
 /* MEDIA QUERIES END -----------------------------------------------*/
+
+
+
+
+
+
 
 
 /* A MESS -----------------------------------------------*/
